--- a/ResourceAPI/Properties/launchSettings.json
+++ b/ResourceAPI/Properties/launchSettings.json
@@ -3,8 +3,8 @@
   "profiles": {
     "http": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "dotnetRunMessages": false,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5183",
       "environmentVariables": {
