--- a/ResourceMVC/Properties/launchSettings.json
+++ b/ResourceMVC/Properties/launchSettings.json
@@ -3,7 +3,7 @@
   "profiles": {
     "http": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
+      "dotnetRunMessages": false,
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5031",
       "environmentVariables": {
@@ -12,7 +12,7 @@
     },
     "https": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
+      "dotnetRunMessages": false,
       "launchBrowser": true,
       "applicationUrl": "https://localhost:7224;http://localhost:5031",
       "environmentVariables": {
